# fastcom

./: CMakeLists.txt  Main.qml  README.md  main.cpp  serialManager.cpp  serialManager.h
